tests/codegen/fail/object/derive_field_non_output_return_type.rs
use juniper::{GraphQLInputObject, GraphQLObject};

#[derive(GraphQLInputObject)]
struct ObjB {
    id: i32,
}

#[derive(GraphQLObject)]
struct ObjA {
    id: ObjB,
}

fn main() {}
