tests/codegen/fail/object/derive_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/object/derive_field_non_output_return_type.rs:10:9
   |
10 |     id: ObjB,
   |         ^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
